Fixed sidebar bug. Now displaying the right field in menu

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -374,7 +374,7 @@
 
           if (this.currentTab == 1) {
             this.drawerWidth ="200px;"
-            this.view = 'home';
+            //this.view = 'editor';
           }
 
           if ((this.URLcontains(path[5]) || this.URLcontains(path[6]) || this.URLcontains(path[7])) && newTab==3) {
