1. Added dirty bit check for analyze-home page. Prevents  uneccessary network calls. 2. Little code cleanup. Can't click "0" backtests on editor-home screen

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -465,6 +465,8 @@
               return;
             }
               
+            this.debounce('updatebtstatus', function(){this.fire('iron-signal',{name:'backtest-updated'})}, 1000);
+          
             this.backtests[backtestId].data.push(e.detail);
             /*var bulksent = this.backtests[backtestId].bulksent;
             var subscription = this.backtests[backtestId].subscription;
