Handle http request error when backtest Id is missing in DB

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -636,7 +636,10 @@
         },
 
         onGetBacktestError: function(e){
-
+            if(e.request.response.id) {
+              var backtestId = e.request.response.id; 
+              delete this.backtests[backtestId];    
+            }
         },
 
         goToRoute: function(e) {
