Added Exception progress bar in backtest-detail item Prevent routing to /editor after canceling the create/clone dialog

--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -136,7 +136,8 @@
       onCancel: function() {
         this.reset();
         this.$.createStrategyModalDialog.close();
-        this.fire('rt-changed',{route:'/dashboard/editor'});
+        //console.log(window.history.back());
+        //this.fire('rt-changed',{route:'/dashboard/editor'});
       },  
 
 			open: function(type) {
