Fixed loading progress bug in user-login-page Changed background color of main app-panel

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -43,11 +43,12 @@
 
     paper-drawer-panel {
       height:100%;
-      background-color: #EFEFEF;--D9D9D9;--#E0F2F1   
+      background-color: #EFEFEF;
     }
 
     paper-header-panel {
       height: 100%;
+      background-color: #f4f9f7;
     }
 
     </style>
