First Commit From Saurav Biswas

--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
   <body class="fullbleed layout vertical">
     <span id="browser-sync-binding"></span>
     <aq-dashboard></aq-dashboard>
+    <script>
+      console.log("Hello");
+    </script>
   </body>
 </html>
