Added a sample element to figure out the routing

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="/resources/scripts/highlight/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <link rel="import" href="/src/aq-dashboard/aq-dashboard.html">
+    <link rel="import" href="src/saurav-components/app-element.html">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <style>
@@ -26,9 +27,7 @@
 
   <body class="fullbleed layout vertical">
     <span id="browser-sync-binding"></span>
-    <aq-dashboard></aq-dashboard>
-    <script>
-      console.log("Hello");
-    </script>
+    <app-element></app-element>
+
   </body>
 </html>
