--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body class="fullbleed layout vertical">
     <span id="browser-sync-binding"></span>
-    <app-element></app-element>
-
+    <!--<app-element></app-element>-->
+    <aq-dashboard></aq-dashboard>
   </body>
 </html>
