--- a/src/saurav-components/elements/aq-html-editor.html
+++ b/src/saurav-components/elements/aq-html-editor.html
@@ -1,20 +1,27 @@
-<link rel="import" href="../../../bower_components/polymer-quill/polymer-quill-bubble.html">
-<link rel="import" href="../../../bower_components/polymer-quill/polymer-quill.html">
+<link rel="import" href="../bower_components/polymer-quill/polymer-quill.html">
 <dom-module id="aq-html-editor">
-    <style is="custom-style">
+    <style>
         polymer-quill.full {
             --polymer-quill-editor-max-height: 300px;
             --polymer-quill-editor-min-height: 150px;
         }
     </style>
     <template>
-        <h1>Hello from html editor</h1>
-        <polymer-quill id="demo1" class="full" store-as="delta" save-interval="1000" toolbar-type="full" content="{&quot;ops&quot;:[{&quot;insert&quot;:&quot;Hello World! - Store as Delta - &quot;},{&quot;attributes&quot;:{&quot;link&quot;:&quot;//proplanr.com&quot;},&quot;insert&quot;:&quot;proplanr.com&quot;},{&quot;attributes&quot;:{&quot;header&quot;:2},&quot;insert&quot;:&quot;\n&quot;}]}">
+        <polymer-quill id="poly_quill_content" store-as="delta" save-interval="10" toolbar-type="" content="">
         </polymer-quill>
     </template>
     <script>
         Polymer({
-            is:"aq-html-editor"
-        })
+            is: "aq-html-editor",
+            ready:function () {
+                this.$.poly_quill_content.setContent("Hello Dude");
+            },
+            getContent: function () {
+                return this.$.poly_quill_content.getHTML();
+            },
+            clearContent: function () {
+                this.$.poly_quill_content.clearEditor();
+            }
+        });
     </script>
 </dom-module>
