--- a/my_bower_components/polymer-quill/polymer-quill.html
+++ b/my_bower_components/polymer-quill/polymer-quill.html
@@ -1,5 +1,5 @@
 
-<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="polymer-quill-import.html">
 <link rel="import" href="polymer-quill-styles-snow.html">
 
@@ -131,8 +131,8 @@ Custom property | Description | Default
         <button class="ql-strike" title="strike" hidden$="{{standardToolbar}}"></button>
       </span>
       <!--<span class="ql-formats" hidden$="{{!standardToolbar}}">-->
-        <!--<select class="ql-color" title="Text Color"></select>-->
-        <!--<select class="ql-background" title="Text Background Color"></select>-->
+      <!--<select class="ql-color" title="Text Color"></select>-->
+      <!--<select class="ql-background" title="Text Background Color"></select>-->
       <!--</span>-->
       <!-- <span class="ql-formats">
       <button class="ql-script" value="sub"></button>
