--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -37,7 +37,7 @@
 
       #mainpanel {
         height:100%;
-        --background-color: #fafafa;
+        --background-color: #fff;
       }
 
       .paper-header {
