Modified styles user-login,signup,forgot-password,editor-home

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <style>
       body {
         font-family: 'Open Sans', sans-serif;
+        background-color: #fff;
       }
     </style>
     <link rel="shortcut icon" type="image/png" href="/resources/images/favicon.png">
