Full Screen attach dialog

--- a/src/dialog/aq-community-attachbacktest-dialog.html
+++ b/src/dialog/aq-community-attachbacktest-dialog.html
@@ -37,9 +37,9 @@
         }
 
         #container-bt {
-            margin-top: 15px;
             width:95%;
             margin: 0 auto;
+            margin-top: 15px;
         }
 
         .heading {
@@ -50,9 +50,13 @@
         }
 
         paper-dialog{
-            height: 100%;
-            width:850px;
-            border: 2px solid #cc6666;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            padding: 0;
+            margin: 0;
         }
 
         paper-drawer-panel {
@@ -86,7 +90,7 @@
         }
 
         #btPanel {
-            width:550px;
+            width:100%;
         }
 
     </style>
