Added back button where required, fixed overlapping issue when drawer is opened, removed ‘Tags’ header when no tags added, changed position of Attach button and added logic when a backtest is attached, added preview option in post reply

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -62,7 +62,9 @@
         aq-community-createpost{
             padding: 0;
         }
-
+        aq-sidebar{
+            z-index: 1000;
+        }
     </style>
 
 
