Merger SauravB into developer - part 2 (Community)

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -54,8 +54,11 @@
       background-color: #f4f9f7;
     }
 
+    aq-sidebar{
+        z-index: 1000;
+    }
+
     </style>
-    
     
     <template>
 
