--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -38,7 +38,7 @@
 
         #mainpanel {
             height: 100%;
-            --background-color: #fff;
+            --background-color: #fafafa;
         }
 
         .paper-header {
@@ -47,7 +47,8 @@
 
         paper-drawer-panel {
             height: 100%;
-            background-color: #EFEFEF;
+            background-color: #fafafa;
+            will-change: transform;
         }
 
         paper-header-panel {
@@ -62,9 +63,7 @@
         aq-community-createpost{
             padding: 0;
         }
-        aq-sidebar{
-            z-index: 1000;
-        }
+
     </style>
 
 
