--- a/src/dialog/aq-community-attachbacktest-dialog.html
+++ b/src/dialog/aq-community-attachbacktest-dialog.html
@@ -58,6 +58,7 @@
             bottom: 0;
             padding: 0;
             margin: 0;
+            z-index: 200;
         }
 
         paper-drawer-panel {
@@ -130,8 +131,7 @@
 
         <aq-check-authentication id='authItem'></aq-check-authentication>
 
-        <paper-dialog with-backdrop=1 id='selectBacktestDialog' on-iron-overlay-canceled='onCancel'
-                      on-iron-overlay-closed='onCancel'>
+        <paper-dialog id='selectBacktestDialog'>
             <div class="outer layout horizontal center">
                 <p class="heading">Attach a Backtest</p>
                 <div class="flex"></div>
