WBug Fix: When signed up, any home page interaction should take to research

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -421,6 +421,12 @@
               return;
           }
 
+	  //When token is available..SKIP signin
+          if(newTab>=3 && !this.hasToken) {
+              this.currentTab = 1;
+              return;
+          }
+
           if (this.URLcontains(path[newTab])) {
             return;
           } else {
