Bug Fix: URL flickering and improved home page interaction(when not signed in)

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -421,8 +421,8 @@
               return;
           }
 
-	  //When token is available..SKIP signin
-          if(newTab>=3 && !this.hasToken) {
+          //When token is available..SKIP signin
+          if(newTab>=3 && this.hasToken) {
               this.currentTab = 1;
               return;
           }
